fix[TN-13-20]: fixed colors of  btn text, block title, header nav on mobile

--- a/apps/block_scout_web/assets/css/components/_pagination_container.scss
+++ b/apps/block_scout_web/assets/css/components/_pagination_container.scss
@@ -6,7 +6,7 @@ $pagination-page-link-color-active: #fff !default;
 @mixin pagination-container-base($background-color, $text-color) {
   background-color: $background-color;
   border: 1px solid $background-color;
-  color: $text-color;
+  color: $text-color !important;
 
   path {
     fill: $text-color;
