--- a/apps/block_scout_web/assets/css/theme/_dark-theme.scss
+++ b/apps/block_scout_web/assets/css/theme/_dark-theme.scss
@@ -340,7 +340,7 @@ $light-sliver: #7E87A1;
 		background-color: $dark-light;
 		&:not(.no-hover):hover {
 			color: #fff;
-			background-color: $dark-primary;
+			background-color: #5B68DF;
 			path {
 				fill: #fff;
 			}
@@ -1222,10 +1222,16 @@ $light-sliver: #7E87A1;
 		}
 	}
 	.card-body .btn-line {
-		color: #010313 !important
+		color: #010313 !important;
+		&:hover {
+			color: #010313 !important;
+		}
 	}
 	.card-body-transactions .btn-line {
 		color: white !important;
+		&:hover {
+			color: white !important;
+		}
 	}
 	.tile-type-block .tile-title {
 		color: #E2E8F1;
@@ -1236,6 +1242,10 @@ $light-sliver: #7E87A1;
 	}
 	.success {
 		color: #74E0A9 !important;
+	}
+
+	.tile-title-chain {
+		color: #E2E8F1 !important;
 	}
 
 
@@ -1258,9 +1268,9 @@ $light-sliver: #7E87A1;
 }
 
 @media (max-width: 991.98px) {
-	.dark-theme-applied .navbar.navbar-primary .navbar-nav,
-	.dark-theme-applied .navbar.navbar-primary .navbar-nav,
-	.dark-theme-applied .navbar.navbar-primary .navbar-nav  {
+	.dark-theme-applied .navbar.navbar-primary .navbar-nav .nav-link:hover,
+	.dark-theme-applied .navbar.navbar-primary .navbar-nav .nav-link.activeLink,
+	.dark-theme-applied .navbar.navbar-primary .navbar-nav .nav-link:focus  {
 		background-image: none;
 		width: 100%;
 		background-color: #35335d !important;
